# code-agent

./: .env.example  .gitignore  Dockerfile  README.md  get_install_id.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
scripts/: run_review.py
src/: __init__.py  config.py  main.py
src/core/: __init__.py  exceptions.py  llm.py  logging.py  pr_parser.py  security.py
src/core/prompts/: __init__.py  code_review.jinja2  file_review.jinja2  generate_summary.jinja2  review_summary.jinja2  review_system.jinja2  summary_system.jinja2
src/core/schemas/: __init__.py  responses.py
src/schemas/: __init__.py  review.py
src/services/: __init__.py
src/services/github/: __init__.py  client.py  routes.py  schemas.py  service.py
src/services/reviewer/: __init__.py  graph.py  patch_parser.py  schemas.py  service.py  state.py  tools.py
src/services/slack/: __init__.py  client.py  routes.py  schemas.py  service.py
tests/: test_pr_parser.py
