[tool.poetry]
name = "matter-pr-reviewer"
version = "0.1.0"
description = "AI-powered GitHub PR reviewer for Matter"
authors = ["Matter AI"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = ">=0.32.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
httpx = ">=0.27.0"
langchain = ">=0.3.0"
langchain-openai = ">=0.3.0"
langgraph = ">=0.2.0"
python-dotenv = ">=1.0.0"
loguru = ">=0.7.0"
pygithub = ">=2.0.0"
slack-sdk = ">=3.0.0"
jinja2 = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8.0"
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
